/*
 * Copyright (c) 2018-2025 Red Hat, Inc.
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Red Hat, Inc. - initial API and implementation
 */

// Generated by Claude Opus 4.6

import { BackupValidationResult } from '@eclipse-che/common';
import userEvent from '@testing-library/user-event';
import React from 'react';

import getComponentRenderer, { screen, waitFor } from '@/services/__mocks__/getComponentRenderer';
import { che } from '@/services/models';

import { RestoreFromBackup } from '..';

const mockValidateBackupImage = jest.fn();

const defaultNamespace: che.KubernetesNamespace = {
  name: 'user-namespace',
  attributes: {
    default: 'true',
    phase: 'Active',
  },
};

const { createSnapshot, renderComponent } = getComponentRenderer(getComponent);

describe('RestoreFromBackup', () => {
  afterEach(() => {
    jest.clearAllMocks();
  });

  describe('initial rendering', () => {
    test('should render panel with title', () => {
      renderComponent();

      expect(screen.getByText('Restore from Backup')).toBeInTheDocument();
    });

    test('should render radio group with both modes', () => {
      renderComponent();

      expect(screen.getByLabelText('Same cluster')).toBeInTheDocument();
      expect(screen.getByLabelText('Cross cluster')).toBeInTheDocument();
    });

    test('should have same-cluster selected by default', () => {
      renderComponent();

      const sameClusterRadio = screen.getByLabelText('Same cluster');
      expect(sameClusterRadio).toBeChecked();
    });

    test('should display radio descriptions', () => {
      renderComponent();

      expect(
        screen.getByText('Restore a workspace from a backup on this cluster.'),
      ).toBeInTheDocument();
      expect(
        screen.getByText('Restore from a backup image on a different cluster or registry.'),
      ).toBeInTheDocument();
    });

    test('snapshot - initial state', () => {
      const snapshot = createSnapshot();
      expect(snapshot.toJSON()).toMatchSnapshot();
    });
  });

  describe('same-cluster mode', () => {
    test('should display workspace name input', () => {
      renderComponent();

      expect(screen.getByLabelText('Workspace name')).toBeInTheDocument();
    });

    test('should display helper text', () => {
      renderComponent();

      expect(screen.getByText('Enter the name of the workspace to restore.')).toBeInTheDocument();
    });

    test('should not display image preview when name is empty', () => {
      renderComponent();

      expect(screen.queryByTestId('image-preview')).not.toBeInTheDocument();
    });

    test('should display image preview when workspace name is entered', async () => {
      renderComponent();

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'my-workspace');

      expect(screen.getByTestId('image-preview')).toBeInTheDocument();
      expect(screen.getByTestId('image-preview')).toHaveTextContent(
        'image-registry.openshift-image-registry.svc:5000/user-namespace/my-workspace:latest',
      );
    });

    test('should sanitize workspace name input', async () => {
      renderComponent();

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'My_Workspace');

      // uppercase and underscores are stripped
      expect(input).toHaveValue('myworkspace');
    });

    test('should use custom registry URL when registryUrl prop is provided', async () => {
      renderComponent({ registryUrl: 'custom-registry.io' });

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'my-ws');

      expect(screen.getByTestId('image-preview')).toHaveTextContent(
        'custom-registry.io/user-namespace/my-ws:latest',
      );
    });

    test('should show error for workspace name exceeding 63 characters', async () => {
      renderComponent();

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'a'.repeat(64));

      expect(
        screen.getByText('Workspace name must be 63 characters or less.'),
      ).toBeInTheDocument();
    });

    test('should use default namespace when namespace name is empty', async () => {
      const emptyNamespace: che.KubernetesNamespace = {
        name: '',
        attributes: {
          default: 'true',
          phase: 'Active',
        },
      };

      renderComponent({ namespace: emptyNamespace });

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'my-ws');

      expect(screen.getByTestId('image-preview')).toHaveTextContent(
        'image-registry.openshift-image-registry.svc:5000/default/my-ws:latest',
      );
    });

    test('should show error for invalid workspace name', async () => {
      renderComponent();

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, '-invalid');

      expect(
        screen.getByText(
          'Must contain only lowercase letters, numbers, and hyphens. Must start and end with a letter or number.',
        ),
      ).toBeInTheDocument();
    });

    test('snapshot - with workspace name', async () => {
      renderComponent();

      const input = screen.getByLabelText('Workspace name');
      await userEvent.click(input);
      await userEvent.type(input, 'my-workspace');

      const snapshot = createSnapshot();
      expect(snapshot.toJSON()).toMatchSnapshot();
    });
  });

  describe('cross-cluster mode', () => {
    test('should display image URL input when cross-cluster selected', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      expect(screen.getByLabelText('Backup image URL')).toBeInTheDocument();
    });

    test('should display helper text for image URL format', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      expect(
        screen.getByText('Enter the full URL of the backup image from the source cluster.'),
      ).toBeInTheDocument();
    });

    test('should display format hint', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      expect(
        screen.getByText('Format: registry-host/namespace/workspace-name:tag'),
      ).toBeInTheDocument();
    });

    test('should show error for invalid image URL format', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'not-a-valid-url');

      expect(
        screen.getByText('Invalid image URL format. Expected: registry/repository:tag'),
      ).toBeInTheDocument();
    });

    test('should sanitize image URL input', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.com/ns/ws:tag<script>');

      // angle brackets stripped
      expect(input).toHaveValue('registry.com/ns/ws:tagscript');
    });

    test('should trigger validation for valid format URL', async () => {
      mockValidateBackupImage.mockResolvedValue({
        payload: {
          valid: true,
          accessible: true,
          metadata: {
            workspaceName: 'test-ws',
            namespace: 'test-ns',
            timestamp: '2026-02-11T12:00:00Z',
            sizeBytes: 1024,
          },
        } as BackupValidationResult,
      });

      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.example.com/ns/workspace:latest');

      // Debounce fires after 500ms
      await waitFor(
        () => {
          expect(mockValidateBackupImage).toHaveBeenCalledWith({
            namespace: 'user-namespace',
            imageUrl: 'registry.example.com/ns/workspace:latest',
          });
        },
        { timeout: 2000 },
      );
    });

    test('should show success validation result', async () => {
      mockValidateBackupImage.mockResolvedValue({
        payload: {
          valid: true,
          accessible: true,
          metadata: {
            workspaceName: 'test-ws',
            namespace: 'test-ns',
            timestamp: '2026-02-11T12:00:00Z',
            sizeBytes: 1024,
          },
        } as BackupValidationResult,
      });

      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.example.com/ns/workspace:latest');

      await waitFor(
        () => {
          expect(screen.getByText(/Backup image is valid and accessible/)).toBeInTheDocument();
        },
        { timeout: 2000 },
      );
    });

    test('should show failure validation result', async () => {
      mockValidateBackupImage.mockResolvedValue({
        payload: {
          valid: false,
          accessible: false,
          error: 'Image not found in registry',
        } as BackupValidationResult,
      });

      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.example.com/ns/workspace:latest');

      await waitFor(
        () => {
          expect(screen.getByText('Image not found in registry')).toBeInTheDocument();
        },
        { timeout: 2000 },
      );
    });

    test('snapshot - cross-cluster mode', async () => {
      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const snapshot = createSnapshot();
      expect(snapshot.toJSON()).toMatchSnapshot();
    });
  });

  describe('mode switching', () => {
    test('should clear workspace name when switching to cross-cluster', async () => {
      renderComponent();

      const nameInput = screen.getByLabelText('Workspace name');
      await userEvent.click(nameInput);
      await userEvent.type(nameInput, 'my-workspace');
      expect(nameInput).toHaveValue('my-workspace');

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      // Workspace name field should not be visible
      expect(screen.queryByLabelText('Workspace name')).not.toBeInTheDocument();
    });

    test('should clear image URL when switching to same-cluster', async () => {
      renderComponent();

      // Switch to cross-cluster
      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const urlInput = screen.getByLabelText('Backup image URL');
      await userEvent.click(urlInput);
      await userEvent.type(urlInput, 'registry.example.com/ns/ws:tag');

      // Switch back to same-cluster
      const sameClusterRadio = screen.getByLabelText('Same cluster');
      await userEvent.click(sameClusterRadio);

      // URL field should not be visible
      expect(screen.queryByLabelText('Backup image URL')).not.toBeInTheDocument();
    });
  });

  describe('validation error handling', () => {
    test('should show default error when payload.error is empty', async () => {
      mockValidateBackupImage.mockResolvedValue({
        payload: {
          valid: false,
          accessible: false,
        } as BackupValidationResult,
      });

      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.example.com/ns/workspace:latest');

      await waitFor(
        () => {
          expect(screen.getByText('Backup image is not accessible.')).toBeInTheDocument();
        },
        { timeout: 2000 },
      );
    });

    test('should handle validation API failure', async () => {
      mockValidateBackupImage.mockRejectedValue(new Error('Network error'));

      renderComponent();

      const crossClusterRadio = screen.getByLabelText('Cross cluster');
      await userEvent.click(crossClusterRadio);

      const input = screen.getByLabelText('Backup image URL');
      await userEvent.click(input);
      await userEvent.type(input, 'registry.example.com/ns/workspace:latest');

      await waitFor(
        () => {
          expect(screen.getByText('Failed to validate backup image.')).toBeInTheDocument();
        },
        { timeout: 2000 },
      );
    });
  });
});

function getComponent(
  options: {
    registryUrl?: string;
    namespace?: che.KubernetesNamespace;
  } = {},
) {
  return (
    <RestoreFromBackup
      defaultNamespace={options.namespace || defaultNamespace}
      validateBackupImage={mockValidateBackupImage}
      registryUrl={options.registryUrl}
    />
  );
}
