// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RestoreFromBackup cross-cluster mode snapshot - cross-cluster mode 1`] = `
<div
  className="pf-c-panel"
>
  <div
    className="pf-c-panel__header"
  >
    <h3
      className="pf-c-title pf-m-lg"
      data-ouia-component-id="OUIA-Generated-Title-26"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe={true}
    >
      Restore from Backup
    </h3>
  </div>
  <div
    className="pf-c-panel__main"
    style={
      {
        "--pf-c-panel__main--MaxHeight": undefined,
      }
    }
  >
    <div
      className="pf-c-panel__main-body"
    >
      <div
        className="radioGroup"
      >
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={true}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-51"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-same-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-same-cluster"
            >
              Same cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore a workspace from a backup on this cluster.
            </span>
          </div>
        </div>
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={false}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-52"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-cross-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-cross-cluster"
            >
              Cross cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore from a backup image on a different cluster or registry.
            </span>
          </div>
        </div>
      </div>
      <div
        className="formFields"
      >
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="restore-workspace-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                Workspace name
              </span>
              <span
                aria-hidden="true"
                className="pf-c-form__label-required"
              >
                 
                *
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="Workspace name"
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-26"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe={true}
              disabled={false}
              id="restore-workspace-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="my-workspace"
              required={false}
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              className="pf-c-form__helper-text"
              id="restore-workspace-name-helper"
            >
              Enter the name of the workspace to restore.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RestoreFromBackup initial rendering snapshot - initial state 1`] = `
<div
  className="pf-c-panel"
>
  <div
    className="pf-c-panel__header"
  >
    <h3
      className="pf-c-title pf-m-lg"
      data-ouia-component-id="OUIA-Generated-Title-5"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe={true}
    >
      Restore from Backup
    </h3>
  </div>
  <div
    className="pf-c-panel__main"
    style={
      {
        "--pf-c-panel__main--MaxHeight": undefined,
      }
    }
  >
    <div
      className="pf-c-panel__main-body"
    >
      <div
        className="radioGroup"
      >
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={true}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-9"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-same-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-same-cluster"
            >
              Same cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore a workspace from a backup on this cluster.
            </span>
          </div>
        </div>
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={false}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-10"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-cross-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-cross-cluster"
            >
              Cross cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore from a backup image on a different cluster or registry.
            </span>
          </div>
        </div>
      </div>
      <div
        className="formFields"
      >
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="restore-workspace-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                Workspace name
              </span>
              <span
                aria-hidden="true"
                className="pf-c-form__label-required"
              >
                 
                *
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="Workspace name"
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-5"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe={true}
              disabled={false}
              id="restore-workspace-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="my-workspace"
              required={false}
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              className="pf-c-form__helper-text"
              id="restore-workspace-name-helper"
            >
              Enter the name of the workspace to restore.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RestoreFromBackup same-cluster mode snapshot - with workspace name 1`] = `
<div
  className="pf-c-panel"
>
  <div
    className="pf-c-panel__header"
  >
    <h3
      className="pf-c-title pf-m-lg"
      data-ouia-component-id="OUIA-Generated-Title-16"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe={true}
    >
      Restore from Backup
    </h3>
  </div>
  <div
    className="pf-c-panel__main"
    style={
      {
        "--pf-c-panel__main--MaxHeight": undefined,
      }
    }
  >
    <div
      className="pf-c-panel__main-body"
    >
      <div
        className="radioGroup"
      >
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={true}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-31"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-same-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-same-cluster"
            >
              Same cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore a workspace from a backup on this cluster.
            </span>
          </div>
        </div>
        <div
          className="radioItem"
        >
          <div
            className="pf-c-radio"
          >
            <input
              aria-invalid={false}
              checked={false}
              className="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-32"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe={true}
              disabled={false}
              id="restore-mode-cross-cluster"
              name="restore-mode"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="pf-c-radio__label"
              htmlFor="restore-mode-cross-cluster"
            >
              Cross cluster
            </label>
            <span
              className="pf-c-radio__description"
            >
              Restore from a backup image on a different cluster or registry.
            </span>
          </div>
        </div>
      </div>
      <div
        className="formFields"
      >
        <div
          className="pf-c-form__group"
        >
          <div
            className="pf-c-form__group-label"
          >
            <label
              className="pf-c-form__label"
              htmlFor="restore-workspace-name"
            >
              <span
                className="pf-c-form__label-text"
              >
                Workspace name
              </span>
              <span
                aria-hidden="true"
                className="pf-c-form__label-required"
              >
                 
                *
              </span>
            </label>
             
          </div>
          <div
            className="pf-c-form__group-control"
          >
            <input
              aria-invalid={false}
              aria-label="Workspace name"
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-16"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe={true}
              disabled={false}
              id="restore-workspace-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="my-workspace"
              required={false}
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              className="pf-c-form__helper-text"
              id="restore-workspace-name-helper"
            >
              Enter the name of the workspace to restore.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
